<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                android:id="@+id/tv_title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:alpha="0"
                android:lineHeight="35dp"
                android:text="@string/txt_sign_in_and_share_your_story"
                android:textColor="@color/color_black"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/tv_title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0"
                android:text="@string/txt_label_email"
                android:textAlignment="textStart"
                android:textColor="@color/color_black" />

            <com.ywauran.storyapp.ui.customview.EditTextEmail
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:background="@drawable/bg_edit_text" />

            <TextView
                android:id="@+id/tv_title_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0"
                android:text="@string/txt_label_password"
                android:textAlignment="textStart"
                android:textColor="@color/color_black" />

            <com.ywauran.storyapp.ui.customview.EditTextPassword
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/txt_hint_password" />

            <com.ywauran.storyapp.ui.customview.ButtonStoryApp
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0"
                android:enabled="false"
                android:text="Login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"                    android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:text="Don't have an account yet?"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:alpha="0"
                    android:text="Create an account"
                    android:textAlignment="center"
                    android:textColor="@color/color_dark_grey"
                    app:layout_constraintStart_toEndOf="@+id/tv_or"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_transparent" />

        <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
</RelativeLayout>